refactor(GUIGameController): translate comment and messages to english